--- a/app/src/main/res/layout/fragment_video_player.xml
+++ b/app/src/main/res/layout/fragment_video_player.xml
@@ -49,6 +49,38 @@
                     android:id="@+id/progressBar"
                     android:layout_width="100dp"
                     android:layout_height="100dp" />
+
+
+                <LinearLayout
+                    android:elevation="3dp"
+                    android:id="@+id/llRetry"
+                    android:background="@drawable/corner_radius_white_3"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/tvTitle"
+                        android:textSize="17sp"
+                        android:textColor="@color/black"
+                        android:text="Connection Error"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:id="@+id/tvAction"
+                        android:layout_marginTop="15dp"
+                        android:textStyle="bold"
+                        android:text="RETRY"
+                        android:textSize="13sp"
+                        android:textColor="@color/other_red"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+
             </RelativeLayout>
 
 
